<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">ABC Jobs</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_coleccionista">COLECCIONISTA</string>
    <string name="texto_coleccionista_lowcase">Coleccionista</string>
    <string name="texto_albumes_lowcase">Álbumes</string>
    <string name="text_album_genero">Género</string>
    <string name="text_album_fecha">Fecha</string>
    <string name="text_album_descripcion">Descripción</string>
    <string name="texto_viniloApp">ViniloApp</string>
    <string name="text_album">Álbumes</string>
    <string name="text_artista">"Artista</string>
    <string name="c_mo_deseas_ingresar">¿Cómo deseas ingresar?</string>
    <string name="bienvenid_a">Bienvenid@ a</string>
    <string name="albums_string">Álbumes</string>
    <string name="crear_album_string">Crear Álbum</string>
    <string name="artistas_string">Artistas</string>
    <string name="coleccionistas_string">Coleccionistas</string>
    <string name="ir_a_home">Ir a home</string>
    <string name="imagen_album">Imagen álbum</string>
    <string name="nombre_label">Nombre</string>
    <string name="name_create_album">Nombre</string>
    <string name="portada_create_album">URL Portada</string>
    <string name="release_date_create_album">Fecha de lanzamiento</string>
    <string name="description_create_album">Descripción</string>
    <string name="toggle_salsa">Salsa</string>
    <string name="toggle_rock">Rock</string>
    <string name="toggle_folk">Folk</string>
    <string name="text_view_genre_create_album">Género</string>
    <string name="recordLabel_create_album">Discográfica</string>
    <string name="button_create_album">Crear</string>
    <string name="create_album_label">Crear álbum</string>
    <string name="required">Requerido</string>
    <string name="sony_music_label">Sony Music</string>
    <string name="emi_label">EMI</string>
    <string name="discos_fuentes_label">Discos Fuentes</string>
    <string name="elektra_label">Elektra</string>
    <string name="fania_records_label">Fania Records</string>

    <string name="sobre_nosotros_1">
        En aquellos primeros días, éramos un equipo pequeño con una gran visión:
        redefinir la forma en que las empresas encuentran y valoran el talento. A pesar de contar con recursos limitados,
        nuestra pasión por conectar personas con oportunidades significativas nos impulsó a superar obstáculos iniciales.
    </string>

    <string name="sobre_nosotros_2">
        Nuestra empresa se fundó con la convicción de que la conexión adecuada de las personas con las oportunidades
        correctas puede impulsar el éxito tanto de individuos como de empresas. Desde sus primeros días, Abc Jobs se ha
        dedicado a superar obstáculos y a evolucionar continuamente.
    </string>

    <string name="sobre_nosotros_3">
        Durante esta etapa, hemos enfrentado cambios significativos y desafíos, transformándonos en una entidad más robusta
        y especializada. Desde ajustes estratégicos hasta la expansión de nuestros servicios, la fase de transición ha
        sido crucial para redefinir nuestra identidad y fortalecer nuestra posición en la intermediación de talento.
    </string>

    <string name="reclutamiento_y_seleccion">Simplificamos su búsqueda de talento con servicios especializados. Identificamos perfiles precisos, publicamos ofertas estratégicas y evaluamos candidatos destacados. Optimice su proceso de contratación con nuestra experiencia.</string>
    <string name="evaluacion_de_candidatos">Garantizamos un proceso completo para seleccionar al mejor talento. Verificamos habilidades técnicas, laborales y experiencia relevante, evaluamos la personalidad y habilidades blandas destacando características personales clave.</string>
    <string name="formacion_online">Nuestra oferta de Formación y Desarrollo se centra en el desarrollo de programas de capacitación diseñados para beneficiar tanto a los empleados actuales como a los futuros. Permitiendo un acceso flexible para el crecimiento profesional</string>

    <string name="boton_entrar">ENTRAR</string>
    <string name="boton_enviar">ENVIAR</string>
    <string name="titulo_login">INICIO DE SESIÓN</string>
    <string name="usuario_label">Usuario</string>
    <string name="usuario_placeholder">Ingrese su correo electrónico</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="password_label">Contraseña</string>
    <string name="password_placeholder">Strong password</string>
    <string name="olvido_contrasena">Olvidó su contraseña o usuario?</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registro_usuario">REGISTRO DE USUARIO</string>
    <string name="bienvenido_texto">Su registro se ha realizado satisfactoriamente.</string>
    <string name="seleccionar_modelo">Seleccione el modelo</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="genero_folk">Folk</string>
    <string name="genero_rock">Rock</string>
    <string name="genero_salsa">Salsa</string>

    <string name="choose_study_type">Tipo de Estudio</string>
    <string name="choose_doc_type">Tipo de Documento</string>
    <string name="choose_country">País o Región</string>
    <string name="choose_city">Ciudad</string>
    <string name="choose_skill">Tipo de Habilidad</string>




</resources>